--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,19 +4,16 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-actix-web = "4.4"
+actix-web = "4.0"
 actix-cors = "0.7"
+sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
+tokio = { version = "1.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tokio = { version = "1.43", features = ["full"] }
-env_logger = "0.11.6"
-log = "0.4.22"
 dotenv = "0.15"
-anyhow = "1.0.95"
-thiserror = "2.0.11"
-async-trait = "0.1.77"
+env_logger = "0.11.6"
+log = "0.4"
 chrono = { version = "0.4", features = ["serde"] }
-sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls", "sqlite", "migrate", "macros", "chrono" ] }
-rusqlite = "=0.32.1"
-bcrypt = "0.16.0"
-jsonwebtoken = "9.2.0"
+jsonwebtoken = "9.2"
+bcrypt = "0.16"
+anyhow = "1.0"
